--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <header> 
+        <h3>Header Logo</h3>
         <ul>
             <li><a href="">Header link one</a></li>
             <li><a href="">Header link two</a></li>
