--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 <body>
     <header> 
-        <h6>Header Logo</h6>
         <ul>
+            <h6>Header Logo</h6 style="text-align:left">
             <li><a href="">Header link one</a></li>
             <li><a href="">Header link two</a></li>
             <li><a href="">Header link three</a></li>
