--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,900&display=swap" rel="stylesheet">
-
 </head>
-<body>
-    <header> 
+<body> 
+    <header>
         <ul>
-            <h6>Header Logo</h6 style="text-align:left">
+            <li class="logotext"><a><h5>Header Logo</h5></a></li>
             <li><a href="">Header link one</a></li>
             <li><a href="">Header link two</a></li>
             <li><a href="">Header link three</a></li>
@@ -65,7 +64,10 @@
          This is an inspiring quote, or a testimonial from a customer.
          Maybe it's just filling up space, or maybe people will actually read it. 
          Who knows ? All I know is that it looks nice. 
-     </p> <br> <span style="text-align: right;"><b>-Thor</b></span>
+     </p> 
+     <div class="Thor">
+        <b>-Thor</b>
+     </div> 
  </div>
 </div>
 </div>
@@ -73,7 +75,7 @@
     <div class="flex-container col_forth">
         <div class="col">
             <h1 class="forthh1">Call to action! It's time!</h1>
-            <p>Sign up for our product by clicking that button right over there!</p>
+            <p class="forthp">Sign up for our product by clicking that button right over there!</p>
         </div>
         <div class="col"> <button class="btn_forth"> Sign Up</button></div>
     </div>
@@ -83,14 +85,5 @@
         Copyright © 
     </footer>
 </div>
-
-
-
-
-
-
-   
-   
-
 </body>
 </html>
